# s4_rtti

./: .gitignore  .todo  CMakeLists.txt  README  cbt.sh
.devcontainer/: devcontainer.json
.github/workflows/: dev_ci.yml  main_ci.yml
config/: s4_rtti_cmake_config.hpp.in
doc/: classes.md
example/: CMakeLists.txt
example/src/: main.cpp
src/: CMakeLists.txt  s4_rtti-config.cmake
src/ctti/: ctti.hpp  ctti_fwd.hpp  type.hpp
src/ctti/attr/: attribute_base.hpp  base.hpp  fundamental.hpp  name.hpp  property.hpp  size.hpp  struct.hpp
src/rtti/: attribute.hpp  attributes.hpp  buffer.cpp  buffer.hpp  class.cpp  class.hpp  database.cpp  database.hpp  enum.cpp  enum.hpp  field.hpp  function.hpp  fundamental.cpp  fundamental.hpp  member.hpp  meta.hpp  method.hpp  object.cpp  object.hpp  rtti.cpp  rtti.hpp  rtti_fwd.hpp  script.hpp  template_instance.cpp  template_instance.hpp  type.cpp  type.hpp
test/: CMakeLists.txt
test/interface/: interface.hpp  s4_rtti_test_interface.hpp
test/lib/: lib.cpp  lib.hpp
test/src/: buffer.cpp  class.cpp  enum.cpp  field.cpp  fundamental.cpp  method.cpp  object.cpp  script.cpp  template.cpp  template_instance.cpp
